[package]
name = "stack-any"
version = "0.1.1"
authors = ["GossiperLoturot"]
edition = "2021"
description = "A library that provides a type that owns same size type on the stack for type erasure."
readme = "README.md"
repository = "https://github.com/GossiperLoturot/stack-any"
license = "MIT"
keywords = ["stack", "any", "type-erasure", "no_std"]
categories = ["memory-management", "data-structures", "no-std"]

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
